--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,8 +22,23 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y qemu-system-x86 ovmf
+          sudo apt-get install -y qemu-system-x86 ovmf curl
           curl -fsSL https://tailscale.com/install.sh | sh
+
+      - name: Check OVMF files
+        run: |
+          echo "Checking /usr/share/OVMF"
+          ls /usr/share/OVMF || echo "Not found"
+          echo "Checking /usr/share/edk2-ovmf/x64"
+          ls /usr/share/edk2-ovmf/x64 || echo "Not found"
+
+      - name: Download OVMF files if missing
+        run: |
+          if [ ! -f /usr/share/OVMF/OVMF_CODE.fd ]; then
+            echo "Downloading OVMF_CODE.fd and OVMF_VARS.fd to runner workspace"
+            wget -q https://github.com/tianocore/edk2/releases/download/edk2-stable202307/OVMF_CODE.fd
+            wget -q https://github.com/tianocore/edk2/releases/download/edk2-stable202307/OVMF_VARS.fd
+          fi
 
       - name: Download Windows ISO
         run: |
@@ -41,13 +56,21 @@ jobs:
 
       - name: Launch QEMU VM with UEFI, 4 cores, 16GB RAM, VNC enabled on :0
         run: |
+          if [ -f /usr/share/OVMF/OVMF_CODE.fd ]; then
+            CODE_PATH=/usr/share/OVMF/OVMF_CODE.fd
+            VARS_PATH=/usr/share/OVMF/OVMF_VARS.fd
+          else
+            CODE_PATH=./OVMF_CODE.fd
+            VARS_PATH=./OVMF_VARS.fd
+          fi
+
           sudo qemu-system-x86_64 \
             -enable-kvm \
             -cpu host \
             -smp 4 \
             -m 16G \
-            -drive if=pflash,format=raw,readonly,file=/usr/share/OVMF/OVMF_CODE.fd \
-            -drive if=pflash,format=raw,file=/usr/share/OVMF/OVMF_VARS.fd \
+            -drive if=pflash,format=raw,readonly=on,file=$CODE_PATH \
+            -drive if=pflash,format=raw,file=$VARS_PATH \
             -drive file="${{ github.event.inputs.vm_name }}.qcow2",format=qcow2 \
             -cdrom "${{ github.event.inputs.vm_name }}.iso" \
             -boot d \
